fix: minor alignment fixes

--- a/styling/about.css
+++ b/styling/about.css
@@ -128,7 +128,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	width: 25rem;
+	width: 24rem;
 	min-height: 10rem;
 	border: 1px solid #ddd;
 	border-radius: 8px;
